--- a/styles/style.css
+++ b/styles/style.css
@@ -11,9 +11,13 @@
     --shadow: drop-shadow(0 0 0.75rem rgb(63, 56, 58));
 }
 
+iframe{
+    margin-top: 25px;
+}
+
+/* make dark mode look nice with a slight transition */
 .dark{
     transition-duration: .8s;
-
     background: linear-gradient(to right, #39375e, #571669);
     --buttonColor: ;
     --buttonTextColor: ;
@@ -39,6 +43,7 @@ hr{
     border-color:var(--hrColor);
 }
 
+/* font change to poppins */
 body{
     transition-duration: 1.2s;
     margin: 0;
@@ -50,6 +55,7 @@ body{
     align-items: center;
 }
 
+/* footer - main */
 footer{
     position: fixed;
     bottom: 0%;
@@ -62,6 +68,7 @@ footer{
     display: flex;
 }
 
+/* details for left and right sides of footer */
 .leftFoot{
     margin-left: 5px;
     text-align: left;
@@ -74,6 +81,7 @@ footer{
     color: var(--navText);
 }
 
+/* for the main content of the page - text wise */
 .main-text{
     text-align: center;
     margin-left: 2in;
@@ -82,6 +90,7 @@ footer{
     font-size: 18px;
 }
 
+/* navbar things */
 .topnav{
     display: flex;
     overflow:hidden;
@@ -113,6 +122,7 @@ footer{
     color:rgb(45, 218, 172);
 }
 
+/* header was a little to bold - changed for h3 and h4 */
 h3{
     justify-content: center;
     text-align: center;
@@ -141,6 +151,7 @@ img{
     max-height: 100%;
 }
 
+/* moon symbol for dark mode */
 .dark-mode-bttn{
     background-color: var(--buttonColor);
     color: var(--buttonTextColor);
@@ -154,7 +165,7 @@ img{
     display: none;
 }
 
-.project-list{
+.list{
     text-align: left;
     text-wrap: normal;
 }
@@ -166,6 +177,7 @@ li img{
     margin-bottom: 1cm;
 }
 
+/* rest of these are for aligning the pictures - essentially a flex box */
 .row{
     display: block;
     align-items: center;
@@ -230,6 +242,12 @@ li img{
         font-size: x-small;
     }
 
+    .topnav a:hover{
+        transition-duration: 1s;
+        font-size: large;
+        color:rgb(45, 218, 172);
+    }
+
     .burger{
         display:inline;
     }
@@ -253,7 +271,7 @@ li img{
         font-size: x-small;
     }
 
-    .project-list{
+    .list{
         text-align: left;
         text-wrap: normal;
         font-size: medium;
