--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ footer{
     text-align: center;
     margin-left: 2.5in;
     margin-right: 2.5in;
+    margin-bottom: 1.5in;
     word-wrap: normal;
     font-size: 18px;
 }
